# gb-flask-fastApi

seminar1/: pyproject.toml  task8.py  task9.py
seminar1/templates/: about.html  base-internet.html  contact.html  dress.html  index8.html  index9.html
seminar2/: pyproject.toml  task9.py
seminar2/templates/: base.html  send_form.html  welcome.html
seminar4/: main.py  pyproject.toml
seminar5/: main.py  pyproject.toml
seminar6/: database.py  main.py  models.py  mydatabase.db  pyproject.toml  schemas.py
