[tool.poetry]
name = "seminar5"
version = "0.1.0"
description = ""
authors = ["Chesnokov M.A. <chesnokov_ma@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
